@@ -3176,13 +3176,6 @@ global int main (argc_t argc, char* argv[]) {
   if (init_memory(&argv1) < 0) goto no_mem;
   # Prepare for catching SP overflow.
   install_stackoverflow_handler(0x4000); # 16 KB reserve should be enough
-  { /* init ARGV */
-    var uintL count;
-    O(argv) = allocate_vector(argc);
-    for (count=0; count<argc; count++)
-      TheSvector(O(argv))->data[count] =
-        asciz_to_string(argv[count],O(misc_encoding));
-  }
   # everything completely initialized.
  {var struct backtrace_t bt;
   bt.bt_next = NULL;
@@ -3254,6 +3247,15 @@ global int main (argc_t argc, char* argv[]) {
     });
   }
   run_hooks(Symbol_value(S(init_hooks)));
+  /* Init O(argv). */
+  {
+    O(argv) = allocate_vector(argc);
+    var argc_t count;
+    for (count = 0; count < argc; count++) {
+      var object arg = asciz_to_string(argv[count],O(misc_encoding));
+      TheSvector(O(argv))->data[count] = arg;
+    }
+  }
   # Perform the desired actions (compilations, read-eval-print loop etc.):
   main_actions(&argv2);
   quit();
